--- a/FontendTests/adoptAPetFrontend/pom.xml
+++ b/FontendTests/adoptAPetFrontend/pom.xml
@@ -122,6 +122,11 @@
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.1</version>
+                    <configuration>
+                        <systemPropertyVariables>
+                            <cucumber.filter.tags>@workflow</cucumber.filter.tags>
+                        </systemPropertyVariables>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
