--- a/FontendTests/adoptAPetFrontend/pom.xml
+++ b/FontendTests/adoptAPetFrontend/pom.xml
@@ -124,7 +124,7 @@
                     <version>2.22.1</version>
                     <configuration>
                         <systemPropertyVariables>
-                            <cucumber.filter.tags>@workflow</cucumber.filter.tags>
+                            <cucumber.filter.tags>@testCI</cucumber.filter.tags>
                         </systemPropertyVariables>
                     </configuration>
                 </plugin>
